Security hardening: scans, rate limits & MFA
Add a GitHub security workflow (gitleaks, Trivy, semgrep, govulncheck, npm audits) and harden services across the stack. Tighten gateway rate limiting with per-user keying and a slow limiter; apply limiters to auth routes and replace refresh proxy with a proxied register endpoint and circuit breaker. Improve auth service security: avoid exposing tokens (hide deviceToken in response), hash revoked tokens in Redis (SHA-256), shorten default refresh expiry to 7 days, sanitize MFA error messages and add logging, and switch backup codes to an unambiguous alphanumeric alphabet with updated tests. Docker compose now requires a Redis password (SPRING_DATA_REDIS_PASSWORD / redis --requirepass) and fixes some exposed ports. Fix a typo in musicman config. Frontend: add CSP meta tag, tighten nginx config and security headers, unify MFA code input to accept backup codes and remove client-side deviceToken handling; update related tests. Overall: house-keeping and security-focused improvements with corresponding test updates.